--- a/index.html
+++ b/index.html
@@ -3,12 +3,48 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Python Project</title>
+  <title>Activity 1: Basic HTML Bio</title>
 </head>
 
 <body>
-  <h1>Python Challenge</h1>
+  <h1>Duy Nguyen</h1>
   <hr>
-  <p>It's time to put away the Excel sheet and join the big leagues. Welcome to the world of programming with Python. In this homework assignment, you'll be using the concepts you've learned to complete 2 Python Challenges, PyBank and PyPoll.
-Both of these challenges encompasses a real-world situation where your newfound Python scripting skills can come in handy. These challenges are far from easy so expect some hard work ahead!</p>
-</body
+  <br>
+  <img src="http://lorempixel.com/400/200" />
+  <br>
+  <p>Write a short paragraph about yourself or some placeholder</p>
+  <p>A second short paragraph about yourself or some place holer</p>
+  <ul>
+    <li><strong>Email: </strong><a href="#">someplace@gmail.com</a></li>
+    <li><strong>Github: </strong><a href="#" target="_blank">sampleName</a></li>
+    <li><strong>Twitter: </strong><a href="#" target="_blank">coming soon</a></li>
+    <li><strong>Profile: </strong><a href="#" target="_blank">01-profile.html</a></li>
+  </ul>
+  <br>
+  <table border="1">
+    <thead>
+      <th>Books</th>
+      <th>Movies</th>
+      <th>Games</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>The Hobbit</td>
+        <td>Lords of the Rings</td>
+        <td>Dark Souls</td>
+      </tr>
+      <tr>
+        <td>Cryptonomicon</td>
+        <td>The Avengers</td>
+        <td>The Last of Us</td>
+      </tr>
+      <tr>
+        <td>Alice in Wonderland</td>
+        <td>The Matrix</td>
+        <td>Dragon Age: Origins</td>
+      </tr>
+    </tbody>
+  </table>
+</body>
+
+</html>
